logs/univider.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.5.3.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/elasticsearch'...
Listing './lib/python3.5/site-packages/elasticsearch/client'...
Listing './lib/python3.5/site-packages/elasticsearch/connection'...
Listing './lib/python3.5/site-packages/elasticsearch/helpers'...
Listing './lib/python3.5/site-packages/elasticsearch-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/hdfs'...
Listing './lib/python3.5/site-packages/hdfs/ext'...
Listing './lib/python3.5/site-packages/hdfs/ext/avro'...
Listing './lib/python3.5/site-packages/hdfs-2.0.16.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/redis_py_cluster-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/rediscluster'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/univider'...
Compiling './lib/python3.5/site-packages/univider/DemoClient.py'...
***   File "./lib/python3.5/site-packages/univider/DemoClient.py", line 48
    print "Thrift2 Demo"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/univider/cacher.py'...
***   File "./lib/python3.5/site-packages/univider/cacher.py", line 75
    except UnicodeEncodeError,e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/encrypter.py'...
***   File "./lib/python3.5/site-packages/univider/encrypter.py", line 20
    print 'source string: ', src
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/univider/fetcher.py'...
***   File "./lib/python3.5/site-packages/univider/fetcher.py", line 22
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/univider/gen-py'...
Listing './lib/python3.5/site-packages/univider/gen-py/hbase'...
Compiling './lib/python3.5/site-packages/univider/indexer.py'...
***   File "./lib/python3.5/site-packages/univider/indexer.py", line 43
    except SerializationError,e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/storager.py'...
***   File "./lib/python3.5/site-packages/univider/storager.py", line 52
    except UnicodeEncodeError,e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/test_cacher.py'...
***   File "./lib/python3.5/site-packages/univider/test_cacher.py", line 8
    print cacher.get('aaaaaaaaa')
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/test_compressor.py'...
***   File "./lib/python3.5/site-packages/univider/test_compressor.py", line 6
    print len(str_l)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/test_encoding.py'...
***   File "./lib/python3.5/site-packages/univider/test_encoding.py", line 3
    print sys.getdefaultencoding()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/test_hostname.py'...
***   File "./lib/python3.5/site-packages/univider/test_hostname.py", line 21
    print node
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/univider/test_indexer.py'...
***   File "./lib/python3.5/site-packages/univider/test_indexer.py", line 9
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/univider/test_path.py'...
***   File "./lib/python3.5/site-packages/univider/test_path.py", line 7
    print path
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/univider/test_redis.py'...
***   File "./lib/python3.5/site-packages/univider/test_redis.py", line 21
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/test_render.py'...
***   File "./lib/python3.5/site-packages/univider/test_render.py", line 6
    print render.getDom("https://detail.tmall.com/item.htm?id=540638557308","true",5)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/univider/test_storager.py'...
***   File "./lib/python3.5/site-packages/univider/test_storager.py", line 9
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/univider/test_urllib2.py'...
***   File "./lib/python3.5/site-packages/univider/test_urllib2.py", line 10
    print html
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/univider-0.0.1b0.dev33.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
